--- a/src/global.scss
+++ b/src/global.scss
@@ -37,7 +37,59 @@
 @import '~swiper/scss';
 @import '~@ionic/angular/css/ionic-swiper';
 
+
+@font-face {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  src: url();
+}
 // placed here instead of tutorial.scss due to slide els not getting ng scoping attribute
 .swiper-slide {
   display: block;
+}
+
+$color-primary: #0d3b6f;
+$color-secondry: #00a29d;
+$color-danger: #EE273A;
+$color-warning: #f9a11c;
+$color-light-blue: #12b2ef;
+$color-dark-blue: #053061;
+
+
+.btn {
+  min-width: 60px;
+  min-height: 30px;
+  background-color: $color-primary;
+  border-radius: 5px;
+  &:hover {
+    background-color: $color-secondry;
+  }
+}
+
+.btn-accept {
+  min-width: 60px;
+  min-height: 30px;
+  background-color: $color-secondry;
+  border-radius: 5px;
+  &:hover {
+    background-color: $color-warning;
+  }
+}
+.btn-warning {
+  min-width: 60px;
+  min-height: 30px;
+  background-color: $color-warning;
+  border-radius: 5px;
+  &:hover {
+    background-color: $color-secondry;
+  }
+}
+
+.btn-danger {
+  min-width: 60px;
+  min-height: 30px;
+  background-color: $color-danger;
+  border-radius: 5px;
+  &:hover {
+    background-color: $color-secondry;
+  }
 }
