--- a/src/global.scss
+++ b/src/global.scss
@@ -55,19 +55,30 @@
   --color-warning: #f9a11c;
   --color-light-blue: #12b2ef;
   --color-dark-blue: #053061;
+  --color-light:#d3fffe;
 }
 
 
 
 
 .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-width: 60px;
   min-height: 30px;
   background-color: var(--color-primary);
+  color: var(--color-light);
+  font-weight: bold;
   border-radius: 5px;
+  padding: auto;
 
   &:hover {
     background-color: var(--color-secondry);
+    color: #053061;
+    box-shadow: 0px 0px 4px var(--color-dark-blue);
+    transition: all 0.1s;
+    transform: scale(1.05);
   }
 }
 
@@ -109,45 +120,56 @@
   color: var(--color-primary);
   height: 30px;
   border-radius: 5px;
+
   input {
     background: transparent;
     border: none;
     height: 100%;
-    &:focus-visible{
+
+    &:focus-visible {
       outline: none;
+    }
+
+    &::placeholder {
+      color: var(--color-dark-blue);
+      opacity: 1;
     }
   }
 }
+
 .block {
-	position: relative;
+  position: relative;
 }
 
-.block:before, .block:after {
-	content: '';
-	position: absolute;
-	left: -1px;
-    top: -1px;
-    background: linear-gradient(45deg,#0d3b6f,#00a29d, #0d3b6f, #00a29d, #0d3b6f);
-	background-size: 400%;
-	width: calc(100% + 2px);
-	height: calc(100% + 2px);
+.block:before,
+.block:after {
+  content: '';
+  position: absolute;
+  left: -1px;
+  top: -1px;
+  background: linear-gradient(45deg, #0d3b6f, #00a29d, #0d3b6f, #00a29d, #0d3b6f);
+  background-size: 400%;
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
   border-radius: 5px;
-	z-index: -1;
-	animation: steam 20s linear infinite;
+  z-index: -1;
+  animation: steam 20s linear infinite;
 }
 
 @keyframes steam {
-	0% {
-		background-position: 0 0;
-	}
-	50% {
-		background-position: 400% 0;
-	}
-	100% {
-		background-position: 0 0;
-	}
+  0% {
+    background-position: 0 0;
+  }
+
+  50% {
+    background-position: 400% 0;
+  }
+
+  100% {
+    background-position: 0 0;
+  }
 }
 
 .block:after {
-	filter: blur(50px);
+  filter: blur(50px);
 }
