feat: home screen + animations

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,23 @@
-<div class="welcom">welcome</div>
+<img src="/assets/general/Watan-logo.png" alt="" width="200px">
+<div class="main-content">
+    <div class="menu-btn">
+        <img src="/assets/icons/awareness.png" alt="" class="icon">
+        <p>Awareness</p>
+    </div>
+    <div class="menu-btn">
+        <img src="/assets/icons/report.png"  alt="" class="icon" style="left:-1px">
+        <p>Reports</p>
+    </div>
+    <div class="menu-btn">
+        <img src="/assets/icons/awareness.png" alt="" class="icon">
+        <p>BENs</p>
+    </div>
+    <div class="menu-btn">
+        <img src="/assets/icons/complaints.png"  alt="" class="icon" style="width:40px;height:40px;top:10px;">
+        <p>Complaints</p>
+    </div>
+    <div class="menu-btn">
+        <img src="/assets/icons/info.png" alt="" class="icon">
+        <p>About Watan</p>
+    </div>
+</div>
