--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,10 +1,10 @@
 <img src="/assets/general/Watan-logo.png" alt="" width="200px">
-<form autocomplete="off">
+<form aria-autocomplete="chrome-off">
     <div class="input-holder block">
-        <input type="text" id="userName" name="userName" autocomplete="false" placeholder="User name">
+        <input type="text" id="userName" name="userName" aria-autocomplete="chrome-off" placeholder="User name">
     </div>
     <div class="input-holder block">
-        <input type="password" id="password" name="password" autocomplete="false" placeholder="password">
+        <input type="password" id="password" name="password" aria-autocomplete="chrome-off" placeholder="password">
     </div>
 <div class="btns">
     <a href="#">forgetpassword</a>
