--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <img src="/assets/general/Watan-logo.png" alt="" width="200px">
 <div class="main-content">
-    <div class="menu-btn">
+    <div class="menu-btn" routerLink="awareness">
         <img src="/assets/icons/awareness.png" alt="" class="icon">
         <p>Awareness</p>
     </div>
-    <div class="menu-btn">
+    <div class="menu-btn" routerLink="reports">
         <img src="/assets/icons/report.png"  alt="" class="icon" style="left:-1px">
         <p>Reports</p>
     </div>
