fix: bens, health , learning and training components and video dialog

--- a/src/app/home/awareness/awareness.component.html
+++ b/src/app/home/awareness/awareness.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <img src="/assets/icons/awareness.png" alt="">
+    <img src="/assets/img/awareness.png" alt="">
     <div class="title">Awareness</div>
     <div class="back" (click)="back()">Back</div>
 </div>
