--- a/src/app/home/reports/reports.component.html
+++ b/src/app/home/reports/reports.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <img src="/assets/icons/report.png" alt="">
+    <img src="/assets/img/report.png" alt="">
     <div class="title">Reports</div>
     <div class="back" (click)="back()">Back</div>
 </div>
