--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
         <img src="/assets/icons/report.png"  alt="" class="icon" style="left:-1px">
         <p>Reports</p>
     </div>
-    <div class="menu-btn">
+    <div class="menu-btn" routerLink="bens">
         <img src="/assets/icons/awareness.png" alt="" class="icon">
         <p>BENs</p>
     </div>
