chore: add upupa and material

--- a/src/global.scss
+++ b/src/global.scss
@@ -38,10 +38,10 @@
 @import '~@ionic/angular/css/ionic-swiper';
 
 
-@font-face {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  src: url();
-}
+// @font-face {
+//   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+//   src: url();
+// }
 
 // placed here instead of tutorial.scss due to slide els not getting ng scoping attribute
 .swiper-slide {
