--- a/src/app/home/bens/bens.component.html
+++ b/src/app/home/bens/bens.component.html
@@ -1,7 +1,11 @@
 <div class="header">
     <img src="/assets/img/beneficiary.png" alt="">
     <div class="title">BENs</div>
-    <div class="back" (click)="back()">Back</div>
+    <button class="back" (click)="back()">
+        <mat-icon>
+            keyboard_backspace
+        </mat-icon>
+    </button>
 </div>
 <div class="btns">
     <button class="normal-btn" *ngFor="let btn of btns" (click)="exec(btn.type,btn.context)">
