--- a/src/app/home/bens/health-care/health-care.component.html
+++ b/src/app/home/bens/health-care/health-care.component.html
@@ -1,7 +1,11 @@
 <div class="header">
     <img src="/assets/img/healthcare.png" alt="">
     <div class="title">Health Care</div>
-    <div class="back" (click)="back()">Back</div>
+    <button class="back" (click)="back()">
+        <mat-icon>
+            keyboard_backspace
+        </mat-icon>
+    </button>
 </div>
 <div class="btns">
     <div class="graphs">
