--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
 :host {
-    background-image: linear-gradient(-70deg, var(--color-primary), var(--color-secondry));
+    background: linear-gradient(107deg,var(--color-primary), var(--color-secondry));
     mix-blend-mode: normal;
     display: grid;
     gap: 25px;
@@ -50,7 +50,7 @@
     min-width: 200px;
     min-height: 60px;
     border-radius: 20px;
-    background-color: var(--color-secondry);
+    background-color: var(--color-primary);
     color: var(--color-primary);
     font-size: 1.3em;
     font-weight: bold;
@@ -79,7 +79,7 @@
         border-radius: 50%;
         width: 50px;
         height: 50px;
-        background-color: var(--color-secondry);
+        background-color: var(--color-primary);
         z-index: 2;
         box-shadow: 0px 0px 4px black;
         transition: all 0.2s;
