--- a/src/app/home/awareness/awareness.component.scss
+++ b/src/app/home/awareness/awareness.component.scss
@@ -27,7 +27,7 @@ color: var(--color-light);
     background-color: var(--color-secondry);
     border-radius: 50%;
     position: absolute;
-    top: 168px;
+    top: 145px;
     left: 5px;
     font-size: 0.6em !important;
     color: var(--color-light);
@@ -37,7 +37,10 @@ color: var(--color-light);
     box-shadow: 0 0 7px rgb(46, 46, 46);
     transition: all 0.2s;
     &:hover{
-        transform: scale(1.1);
+        transform: scale(1.2);
+        background: transparent;
+        box-shadow: none;
+        color: transparent;
 
     }
 }
