--- a/src/app/home/bens/bens.component.scss
+++ b/src/app/home/bens/bens.component.scss
@@ -29,7 +29,7 @@
     background-color: var(--color-secondry);
     border-radius: 50%;
     position: absolute;
-    top: 168px;
+    top: 145px;
     left: 5px;
     font-size: 0.6em !important;
     color: var(--color-light);
@@ -40,7 +40,11 @@
     transition: all 0.2s;
 
     &:hover {
-        transform: scale(1.1);
+        transform: scale(1.2);
+        background: transparent;
+        box-shadow: none;
+        color: transparent;
+
 
     }
 }
