--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,23 @@
 <img src="/assets/general/Watan-logo.png" alt="" width="200px">
 <div class="main-content">
-    <div class="menu-btn" routerLink="awareness">
-        <img src="/assets/icons/awareness.png" alt="" class="icon">
+    <div class="menu-btn" (mousedown)="goTo('home/awareness')">
+        <img src="/assets/img/awareness.png" alt="" class="icon">
         <p>Awareness</p>
     </div>
-    <div class="menu-btn" routerLink="reports">
-        <img src="/assets/icons/report.png"  alt="" class="icon" style="left:-1px">
+    <div class="menu-btn" (mousedown)="goTo('home/reports')">
+        <img src="/assets/img/report.png"  alt="" class="icon">
         <p>Reports</p>
     </div>
-    <div class="menu-btn" routerLink="bens">
-        <img src="/assets/icons/awareness.png" alt="" class="icon">
+    <div class="menu-btn" (mousedown)="goTo('home/bens')">
+        <img src="/assets/img/beneficiary.png" alt="" class="icon">
         <p>BENs</p>
     </div>
     <div class="menu-btn">
-        <img src="/assets/icons/complaints.png"  alt="" class="icon" style="width:40px;height:40px;top:10px;">
+        <img src="/assets/img/complaints.png"  alt="" class="icon">
         <p>Complaints</p>
     </div>
     <div class="menu-btn">
-        <img src="/assets/icons/info.png" alt="" class="icon">
+        <img src="/assets/img/info.png" alt="" class="icon">
         <p>About Watan</p>
     </div>
 </div>
