--- a/src/app/dialogs/dynamic-dialog/dynamic-dialog.component.html
+++ b/src/app/dialogs/dynamic-dialog/dynamic-dialog.component.html
@@ -1,3 +1,9 @@
 <div class="htmlContent" *ngIf="type == 'htmlContent'" [innerHtml]="context"></div>
 <iframe [src]="context | youtube" *ngIf="type == 'video'"
 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<pdf-viewer
+[src]="context"
+[render-text]="true"
+style="display: block;"
+*ngIf="type == 'pdf'"
+></pdf-viewer>
