--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,13 @@
+.tab-bar{
+position: absolute;
+bottom: 10px;
+left: 50%;
+transform: translate(-50%);
+
+
+
+}
+
 ion-menu ion-content {
   --padding-top: 20px;
   --padding-bottom: 20px;
