--- a/src/app/home/awareness/awareness.component.scss
+++ b/src/app/home/awareness/awareness.component.scss
@@ -48,7 +48,7 @@ color: var(--color-light);
     box-shadow: 0 -1px 5px var(--color-primary);
     width: 100%;
     display: flex;
-    height: 100%;
+    height: calc(100vh  - 50px);
     border-radius: 25px 25px 0 0;
     flex-direction: column;
     align-items: center;
@@ -61,4 +61,9 @@ color: var(--color-light);
 
 
 
+}
+.white-space{
+    height: 65px;
+    width: 100%;
+    background-color: white;
 }
