--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,14 @@
 <img src="/assets/general/Watan-logo.png" alt="" width="200px">
 <div class="main-content">
-    <div class="menu-btn" (mousedown)="goTo('home/awareness')">
+    <div class="menu-btn" (mousedown)="goTo('en/home/awareness')">
         <img src="/assets/img/awareness.png" alt="" class="icon">
         <p>Awareness</p>
     </div>
-    <div class="menu-btn" (mousedown)="goTo('home/reports')">
+    <div class="menu-btn" (mousedown)="goTo('en/home/reports')">
         <img src="/assets/img/report.png"  alt="" class="icon">
         <p>Reports</p>
     </div>
-    <div class="menu-btn" (mousedown)="goTo('home/bens')">
+    <div class="menu-btn" (mousedown)="goTo('en/home/bens')">
         <img src="/assets/img/beneficiary.png" alt="" class="icon">
         <p>BENs</p>
     </div>
