fix: add btns animation to tab bar

--- a/src/app/tab-bar/tab-bar.component.html
+++ b/src/app/tab-bar/tab-bar.component.html
@@ -1,4 +1,4 @@
-<div class="tab-btn">
+<div class="tab-btn" [routerLink]="''">
     <img src="/assets/tab-icons/home.png" alt="">
 </div>
 <div class="tab-btn">
