--- a/src/app/home/bens/bens.component.scss
+++ b/src/app/home/bens/bens.component.scss
@@ -53,7 +53,7 @@
     box-shadow: 0 -1px 5px var(--color-primary);
     width: 100%;
     display: flex;
-    height: 100%;
+    height: calc(100vh - 150px);
     border-radius: 25px 25px 0 0;
     flex-direction: column;
     align-items: center;
