--- a/src/global.scss
+++ b/src/global.scss
@@ -237,3 +237,13 @@ display: grid;
   width: 100%;
   background-color: white;
 }
+
+.custom-modalbox{
+  mat-dialog-container{
+    background-color: #0d3b6f;
+  }
+  button{
+    color: white;
+    font-weight: bolder;
+  }
+}
