--- a/src/app/home/reports/centers/centers.component.scss
+++ b/src/app/home/reports/centers/centers.component.scss
@@ -70,6 +70,10 @@
 
             div {
                 line-height: 1.3;
+                font-size: 0.8em;
+            }
+            .left{
+                font-weight: 500;
             }
         }
     }
