--- a/src/app/home/reports/needs/needs.component.scss
+++ b/src/app/home/reports/needs/needs.component.scss
@@ -53,6 +53,10 @@
             min-height: 40px;
             div{
                 line-height: 1.3;
+                font-size: 0.8em;
+            }
+            .left{
+                font-weight: 500;
             }
             .sector{
                 color: var(--color-primary);
