--- a/src/app/home/reports/number-of-bens/number-of-bens.component.scss
+++ b/src/app/home/reports/number-of-bens/number-of-bens.component.scss
@@ -55,6 +55,10 @@
             min-height: 40px;
             div{
                 line-height: 1.3;
+                font-size: 0.8em;
+            }
+            .left{
+                font-weight: 500;
             }
         }
     }
