--- a/src/app/home/reports/service-activity-updates/service-activity-updates.component.scss
+++ b/src/app/home/reports/service-activity-updates/service-activity-updates.component.scss
@@ -71,6 +71,10 @@
 
             div {
                 line-height: 1.3;
+                font-size: 0.8em;
+            }
+            .left{
+                font-weight: 500;
             }
         }
     }
