fix: reports style

--- a/src/app/home/reports/service-activity-updates/service-activity-updates.component.html
+++ b/src/app/home/reports/service-activity-updates/service-activity-updates.component.html
@@ -16,7 +16,7 @@
             </div> -->
             <div class="line">
                 <div class="left">{{activity.name}}:</div>
-                <div class="right"> &nbsp;{{activity.update}}</div>
+                <div class="right {{activity.update}}"> &nbsp;{{activity.update}}</div>
             </div>
         </div>
     </div>
