--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -54,7 +54,7 @@
     color: var(--color-primary);
     font-size: 1.3em;
     font-weight: bold;
-    box-shadow: 2px 1px 3px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 1px 4px var(--color-primary);
     transition: all 0.2s;
 
 
