--- a/src/app/tab-bar/tab-bar.component.scss
+++ b/src/app/tab-bar/tab-bar.component.scss
@@ -5,6 +5,7 @@
     border-radius: 10px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    box-shadow: 0px 0px 10px 2px var(--color-primary);
 }
 
 .tab-btn {
