--- a/src/global.scss
+++ b/src/global.scss
@@ -138,22 +138,24 @@
   max-width: 250px;
   min-height: 40px;
   border-radius: 25px;
-  background-color: var(--color-primary);
-  color: #fff;
-  font-size: 0.4em;
+  background-color: transparent;
+  background-color: #F6f6f6;
+  color: var(--color-primary);
+  border: 1px solid #DEDEE4;
+  font-size: 0.5em;
+  font-weight: bold;
   overflow: hidden;
+  letter-spacing: 1.1px;
   transition: all 0.2s;
-  box-shadow: 0 1px 5px var(--color-primary);
-
 
   &:hover {
-      color: aliceblue;
-      background-color: var(--color-secondry);
+      color: var(--color-secondry);
+      background-color: #DEDEE4;
       margin-top: 5px;
       margin-bottom: 5px;
       transform: scale(1.1);
 
-      box-shadow: 0 1px 7px var(--color-secondry);
+      box-shadow: 0px 3px 6px #00000029;
   }
 }
 
