--- a/src/app/home/reports/needs/needs.component.scss
+++ b/src/app/home/reports/needs/needs.component.scss
@@ -58,6 +58,9 @@
             .left{
                 font-weight: 500;
             }
+            .right{
+                font-size: 0.7em;
+            }
             .sector{
                 color: var(--color-primary);
                 background-color: var(--color-secondry);
