fix: complaints component and complaint form

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
         <img src="/assets/img/beneficiary.png" alt="" class="icon">
         <p>BENs</p>
     </div>
-    <div class="menu-btn">
+    <div class="menu-btn" (mousedown)="goTo('complaints')">
         <img src="/assets/img/complaints.png"  alt="" class="icon">
         <p>Complaints</p>
     </div>
