feat: page items cp

--- a/src/global.scss
+++ b/src/global.scss
@@ -59,9 +59,8 @@
   --ion-item-border-color:#0d3b6f;
 }
 
-
-admin-layout .mat-table {
-    background: #424242 !important;
+dynamic-form{
+    padding: 5px;
 }
 
 
