--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
         <img src="/assets/img/complaints.png"  alt="" class="icon">
         <p>Complaints</p>
     </div>
-    <div class="menu-btn">
+    <div class="menu-btn" (mousedown)="goTo('about')">
         <img src="/assets/img/info.png" alt="" class="icon">
         <p>About Watan</p>
     </div>
