--- a/src/app/choose-camp/choose-camp.component.scss
+++ b/src/app/choose-camp/choose-camp.component.scss
@@ -3,6 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: linear-gradient(107deg,var(--color-primary), var(--color-secondry));
+
 }
 .btn{
     min-width: 200px;
