--- a/src/app/tab-bar/tab-bar.component.html
+++ b/src/app/tab-bar/tab-bar.component.html
@@ -1,10 +1,10 @@
-<div class="tab-btn" [routerLink]="''">
+<div class="tab-btn" (mousedown)="navTo('')">
     <img src="/assets/tab-icons/home.png" alt="">
 </div>
 <div class="tab-btn">
     <img src="/assets/tab-icons/user.png" alt="">
 </div><div class="tab-btn">
-    <img src="/assets/tab-icons/statistics.png" alt="">
+    <img src="/assets/tab-icons/statistics.png" alt="" (mousedown)="navTo('reports')">
 </div><div class="tab-btn">
     <img src="/assets/tab-icons/location.png" alt="">
 </div><div class="tab-btn">
