--- a/src/app/choose-camp/choose-camp.component.html
+++ b/src/app/choose-camp/choose-camp.component.html
@@ -1,2 +1,2 @@
 <h1>Choose your camp</h1>
-<button class="btn btn-accept" (mousedown)="setCamp('My camp')">My camp</button>
+<button class="btn btn-accept" *ngFor="let camp of camps" (mousedown)="setCamp(camp._id)">{{camp.name}}</button>
