--- a/src/app/home/bens/learning-and-training/learning-and-training.component.html
+++ b/src/app/home/bens/learning-and-training/learning-and-training.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <img src="/assets/img/healthcare.png" alt="">
-    <div class="title">Health Care</div>
+    <div class="title">learning and training</div>
     <button class="back" (click)="back()">
         <mat-icon>
             keyboard_backspace
