--- a/src/app/home/view-content/view-content.component.html
+++ b/src/app/home/view-content/view-content.component.html
@@ -1,6 +1,5 @@
 <div class="header">
     <img src="/assets/general/Watan-logo.png" alt="">
-    <div class="title"></div>
     <button class="back" (click)="back()">
         <mat-icon>
             keyboard_backspace
@@ -11,10 +10,10 @@
     <ng-container *ngIf="data">
         <div *ngFor="let it of data.items" class="item">
             <div *ngIf="it.type == 'video'" class="video">
-                <a (click)="openVideo(it.url)">{{it.name}}</a> // youtube icon
+               <img src="/assets/icons/youtube.png" alt=""> <a (click)="openVideo(it.url)">{{it.name}}</a>
             </div>
             <div *ngIf="it.type == 'pdf'" class="pdf">
-                <a (click)="openPdf(it.url)">{{it.name}}</a> // pdf icon
+                <img src="/assets/icons/pdf.png" alt=""><a (click)="openPdf(it.url)">{{it.name}}</a> 
             </div>
             <div *ngIf="it.type == 'html'" class="html">
                 <section class="content" [innerHTML]="it.content"></section>
