--- a/src/app/home/view-content/view-content.component.scss
+++ b/src/app/home/view-content/view-content.component.scss
@@ -1,65 +1,108 @@
 :host {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 2em;
+  color: var(--color-light);
+  background: linear-gradient(
+    107deg,
+    var(--color-primary),
+    var(--color-secondry)
+  );
+}
+
+.header {
+  img {
+    max-width: 150px;
+  }
+
+  width: 100%;
+  display: grid;
+  place-items: center;
+  gap: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.back {
+  height: 50px;
+  width: 50px;
+  background-color: var(--color-secondry);
+  border-radius: 50%;
+  position: absolute;
+  top: 168px;
+  left: 5px;
+  font-size: 0.6em !important;
+  color: var(--color-light);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 7px rgb(46, 46, 46);
+  transition: all 0.2s;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+.btns {
+  box-shadow: 0 -1px 5px var(--color-primary);
+  width: 100%;
+  display: flex;
+  height: 100%;
+  border-radius: 25px 25px 0 0;
+  flex-direction: column;
+  align-items: center;
+  overflow: auto;
+  gap: 30px;
+  background-color: white;
+  padding: 35px 0 0 0;
+
+  .item {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    gap: 10px;
     align-items: center;
-    font-size: 2em;
-    color: var(--color-light);
-    background: linear-gradient(
-      107deg,
-      var(--color-primary),
-      var(--color-secondry)
-    );
-  }
-  
-  .header {
-    img {
-      max-width: 100px;
-    }
-  
     width: 100%;
-    display: grid;
-    place-items: center;
-    gap: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-  .back {
-    height: 50px;
-    width: 50px;
-    background-color: var(--color-secondry);
-    border-radius: 50%;
-    position: absolute;
-    top: 168px;
-    left: 5px;
-    font-size: 0.6em !important;
-    color: var(--color-light);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 0 7px rgb(46, 46, 46);
-    transition: all 0.2s;
-    &:hover {
-      transform: scale(1.1);
+    .video,
+    .pdf {
+      display: flex;
+      padding: 15px;
+      gap: 10px;
+      width: 95%;
+      font-size: 0.8em;
+      align-items: center;
+      background-color: #dedee4;
+      border-radius: 20px;
+      a {
+        text-decoration: none;
+      }
+      img{
+        max-width: 30px;
+      }
+    }
+
+    .html {
+      width: 100%;
+      color: var(--color-primary);
+      padding: 10px;
+      .content {
+        h1,
+        h2,
+        h3,
+        h4,
+        h5 {
+          color: var(--color-secondry);
+          strong {
+            color: var(--color-secondry);
+          }
+        }
+        p {
+          color: var(--color-primary);
+          strong {
+            color: var(--color-primary);
+          }
+        }
+      }
     }
   }
-  .btns {
-    box-shadow: 0 -1px 5px var(--color-primary);
-    width: 100%;
-    display: flex;
-    height: 100%;
-    border-radius: 25px 25px 0 0;
-    flex-direction: column;
-    align-items: center;
-    overflow: auto;
-    gap: 30px;
-    background-color: white;
-    padding: 35px 0 0 0;
-  
- 
-  }
-  .white-space{
-      background-color: #F0F1F1;
-  
-  }
-  
+}
+
