--- a/src/app/tab-bar/tab-bar.component.html
+++ b/src/app/tab-bar/tab-bar.component.html
@@ -1,12 +1,14 @@
-<div class="tab-btn" (mousedown)="navTo('')">
-    <img src="/assets/tab-icons/home.png" alt="">
-</div>
-<div class="tab-btn">
-    <img src="/assets/tab-icons/user.png" alt="">
-</div><div class="tab-btn">
-    <img src="/assets/tab-icons/statistics.png" alt="" (mousedown)="navTo('reports')">
-</div><div class="tab-btn">
-    <img src="/assets/tab-icons/location.png" alt="">
-</div><div class="tab-btn">
-    <img src="/assets/tab-icons/logout.png" alt="">
+<div class="container">
+    <div class="tab-btn" (mousedown)="navTo('')">
+        <img src="/assets/tab-icons/home.png" alt="">
+    </div>
+    <div class="tab-btn">
+        <img src="/assets/tab-icons/user.png" alt="">
+    </div><div class="tab-btn">
+        <img src="/assets/tab-icons/statistics.png" alt="" (mousedown)="navTo('reports')">
+    </div><div class="tab-btn">
+        <img src="/assets/tab-icons/location.png" alt="">
+    </div><div class="tab-btn">
+        <img src="/assets/tab-icons/logout.png" alt="">
+    </div>
 </div>
