--- a/src/app/tab-bar/tab-bar.component.scss
+++ b/src/app/tab-bar/tab-bar.component.scss
@@ -1,26 +1,32 @@
 :host {
-    width: 90vw;
-    height: 40px;
-    background-color: var(--color-primary);
-    border-radius: 20px;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    box-shadow: 0px 0px 10px 2px var(--color-primary);
-}
-
-.tab-btn {
-    height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: all 0.2s;
-
-    img {
-        max-width: 25px;
-        filter: brightness(0) invert(1);
-    }
-    &:hover{
-        transform: scale(1.3);
+    
+}
+.container{
+    width: 90vw;
+    display: grid;
+    height: 40px;
+    border-radius: 20px;
+    grid-template-columns: repeat(5, 1fr);
+    box-shadow: 0px 0px 10px 2px var(--color-primary);
+    background-color: var(--color-primary);
+    .tab-btn {
+        
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: all 0.2s;
+        
+        img {
+            max-width: 25px;
+            filter: brightness(0) invert(1);
+        }
+        &:hover{
+            transform: scale(1.3);
+        }
     }
 }
