chore: departments, settings, users,roles, camp user

--- a/src/app/admin-layout/admin-layout.component.html
+++ b/src/app/admin-layout/admin-layout.component.html
@@ -122,7 +122,7 @@
         </ion-menu>
         <!-- <div class="router-container"> -->
 
-            <!-- <h2>{{title|text}}</h2> -->
+            <h2 style="position: fixed;top:0;height:20px">{{title|text}}</h2>
 
             <ion-router-outlet id="main-content"></ion-router-outlet>
         <!-- </div> -->
