--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -16,4 +16,4 @@
     <div class="btn"><img src="/assets/icons/facebook.png" width="20px" alt="">&nbsp;Continue with Facbook</div>
 </div>
 <p>You don't have an account?</p>
-<button class="btn" routerLink="/sign-up">Sign up now!</button>
+<button class="btn" routerLink="/en/sign-up">Sign up now!</button>
