--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 
     <ion-router-outlet id="main-content"></ion-router-outlet>
 
-<tab-bar class="tab-bar" *ngIf="camp"></tab-bar>
+<tab-bar class="tab-bar" *ngIf="camp && loggedIn"></tab-bar>
 </ion-app>
