fix: sign-in and sign-up pages

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,19 +1,15 @@
 <img src="/assets/general/Watan-logo.png" alt="" width="200px">
-<form aria-autocomplete="chrome-off">
+<form autocomplete="off" (ngSubmit)="onSubmit()" #f="ngForm">
     <div class="input-holder block">
-        <input type="text" id="userName" name="userName" aria-autocomplete="chrome-off" placeholder="User name">
+        <input type="text" id="userName" name="userName" onfocus="this.removeAttribute('readonly');" readonly   placeholder="User name" [(ngModel)]="userName">
     </div>
     <div class="input-holder block">
-        <input type="password" id="password" name="password" aria-autocomplete="chrome-off" placeholder="password">
+        <input type="password" id="password" name="password" onfocus="this.removeAttribute('readonly');" readonly  placeholder="password" [(ngModel)]="password">
     </div>
 <div class="btns">
     <a href="#">forgetpassword</a>
-    <button class="btn">Sign in</button>
+    <button class="btn" type="submit">Sign in</button>
 </div>
 </form>
-<div class="external-login">
-    <div class="btn"><img src="/assets/icons/google.png" width="20px" alt="">&nbsp; Continue with Google</div>
-    <div class="btn"><img src="/assets/icons/facebook.png" width="20px" alt="">&nbsp;Continue with Facbook</div>
-</div>
 <p>You don't have an account?</p>
-<button class="btn" routerLink="/en/sign-up">Sign up now!</button>
+<button class="btn" (mousedown)="navTo('sign-up')">Sign up now!</button>
