--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -7,6 +7,13 @@
 }
 
 form {
+transition: all 200ms;
+    .selected{
+        background-color: var(--color-warning);
+    }
+    .selection{
+        min-width: 200px;
+    }
     display: grid;
     gap: 10px;
     place-content: center;
@@ -16,6 +23,9 @@ form {
         max-width: 65px;
 
 
+    }
+    .input-holder{
+        background:white;
     }
 
     .btns {
