--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -1,49 +1,72 @@
 :host {
-    background-image: linear-gradient(60deg, var(--color-primary), var(--color-secondry));
-    mix-blend-mode: normal;
-    display: grid;
-    place-content: center;
-    gap: 25px;
-    height: 100%;
+  background-image: linear-gradient(
+    60deg,
+    var(--color-primary),
+    var(--color-secondry)
+  );
+  mix-blend-mode: normal;
+  display: grid;
+  place-content: center;
+  gap: 25px;
+  height: 100%;
 }
 
 form {
-transition: all 200ms;
-    .selected{
-        background-color: var(--color-warning);
-    }
-    .selection{
-        min-width: 200px;
-    }
-    display: grid;
-    gap: 10px;
-    place-content: center;
+  transition: all 200ms;
+  .selected {
+    background-color: var(--color-warning);
+  }
+  .selection {
+    min-width: 200px;
+  }
+  display: grid;
+  gap: 10px;
+  place-content: center;
 
-    .btn {
-        font-weight: bold;
-        max-width: 65px;
+  .btn {
+    font-weight: bold;
+    max-width: 65px;
+  }
 
+  .input-holder {
+    background: white;
+  }
 
-    }
-
-
-    .input-holder{
-        background:white;
-    }
-
-    .btns {
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-        align-items: center;
-    }
+  .btns {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
-.external-login{
-    display: grid;
-    gap: 10px;
+.external-login {
+  display: grid;
+  gap: 10px;
 }
-p{
-    color: var(--color-secondry);
-    text-align: center;
-    margin: 0;
+p {
+  color: var(--color-secondry);
+  text-align: center;
+  margin: 0;
+}
+::ng-deep mat-form-field {
+  .mat-mdc-text-field-wrapper {
+    border-radius: 15px !important;
+    max-height: 40px;
+    .mat-mdc-form-field-flex {
+      max-height: 40px;
+      .mat-mdc-form-field-infix {
+        padding-top: 20px;
+        padding-bottom: 0px;
+        max-height: 40px;
+        min-height: 40px;
+        .mat-mdc-floating-label {
+          top: auto;
+          max-height: 40px;
+        }
+      }
+    }
+  }
+  .mat-mdc-form-field-subscript-wrapper {
+    display: none;
+  }
 }
