--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -30,7 +30,7 @@
     <mat-form-field appearance="fill" >
         <mat-label>Choose camp</mat-label>
         <mat-select name="campId" [(ngModel)]="form.campId">
-            <mat-option *ngFor="let c of camps" [value]="c._id">
+            <mat-option *ngFor="let c of camps" [value]="c._id" [selection]="c.name">
                 {{c.name}}
             </mat-option>
         </mat-select>
