--- a/src/app/home/complaints/complaints.component.html
+++ b/src/app/home/complaints/complaints.component.html
@@ -10,14 +10,14 @@
 <div class="container">
     <h1>Fill a complaint</h1>
     <div class="btns">
-        <button class="normal-btn">
+        <a href="whatsapp//send?phone=+905317381053" class="normal-btn">
             <img class="icon" src="/assets/icons/telephone.png" alt="">
             <div class="text">Call</div>
-        </button>
-        <button class="normal-btn">
+        </a>
+        <a href="mailto:test@test.com" class="normal-btn">
             <img class="icon" src="/assets/icons/email.png" alt="">
             <div class="text">Email</div>
-        </button>
+        </a>
         <button class="normal-btn" (mousedown)="navTo('complaint-form')">
             <img class="icon" src="/assets/icons/complaint.png" alt="">
             <div class="text">Complaint form</div>
