--- a/src/app/home/complaints/complaints.component.html
+++ b/src/app/home/complaints/complaints.component.html
@@ -10,7 +10,7 @@
 <div class="container">
     <h1>Fill a complaint</h1>
     <div class="btns">
-        <a href="whatsapp//send?phone=+905317381053" class="normal-btn">
+        <a href="tel:+90-531-738-1053" class="normal-btn">
             <img class="icon" src="/assets/icons/telephone.png" alt="">
             <div class="text">Call</div>
         </a>
